--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,8 @@
     <string name="company_name">MOKO TECHNOLOGY LTD.</string>
     <string name="about_title">ABOUT</string>
     <string name="company_website">www.mokosmart.com</string>
-    <string name="rssi_filter">*The device will uplink valid ADV data with RSSI no less than %ddBm.</string>
+    <string name="wifi_fix_filter">*The information of WIFI device whose rssi is no less than %ddBm will be uploaded.</string>
+    <string name="ble_fix_filter">*The device will uplink valid ADV data with RSSI no less than %ddBm.</string>
 
     <string name="permission_storage_close_content">Please find it in cellphone setting- permission, and allow LW006 use the Storage and location permission</string>
     <string name="permission_ble_close_content">Please find it in cellphone setting- permission, and allow LW006 use the bluetooth and location permission</string>
